# rust-playground

./: README.md
sheep/: Cargo.toml  README.md  fmt.sh
sheep/src/: eagle.rs  find.rs  floats.rs  hi.rs  main.rs  nom_test.rs  nommy_nom_nommy_nom.rs  regex_test.rs  timmath.rs
sheep/src/eagle/: gp5_perf_test.rs  silly.rs  strtest.rs
sheep/src/hi/: thirsty.rs
sheep/stuff/: float-test.txt  testing.txt  yesyes.txt
sheep_etc/c/: Cargo.toml
sheep_etc/c/src/: main.rs
sheep_etc/c/src/song/: main.rs
sheep_etc/gp5_test/: Cargo.toml
sheep_etc/gp5_test/benches/: gp5_test.rs
sheep_etc/gp5_test/src/: lib.rs
sheep_etc/qaq/: Cargo.toml
sheep_etc/qaq/src/: main.rs
sheep_etc/webgl/: Cargo.toml  README.md
sheep_etc/webgl/src/: learning.rs  main.rs
sheep_etc/webgl/src/learning/: fragment.frag  vertex.vert
sheep_wasm/: Cargo.toml  build.sh  index.html
sheep_wasm/src/: lib.rs  utils.rs
trumpet/guessing_game/: Cargo.toml
trumpet/guessing_game/src/: main.rs
unsignedbyte/: Cargo.toml  hi
unsignedbyte/piscript/: input.pi
unsignedbyte/piscript/input/: input.pi
unsignedbyte/src/: aaaaastrings.rs  lib.rs  main.rs
unsignedbyte/stpuid s/: Cargo.toml  GP5PERF.java  hi.rs  hipeople.txt  output.rs  output.txt
unsignedbyte/stpuid s/src/: aaaaastrings.rs  lib.rs  main.rs  regex.rs
