[package]
name = "sheep"
version = "0.1.0"
authors = ["SheepTester <ussa.say@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
nom = "5.1.2"
colored = "1.9.3"
rand = { version = "0.7", features = ["log", "serde1"] }
